<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal">
            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
            <TextView
                android:id="@+id/tv_welcome"
                android:layout_below="@id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_welcome_nplease_provide_your_basic_information"
                android:textSize="@dimen/text_size_small"/>

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/img_size_normal"
                android:layout_height="@dimen/img_size_normal"
                android:layout_below="@id/tv_welcome"
                android:layout_marginTop="39dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_centerInParent="true"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name"
                android:layout_below="@+id/iv_user">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_name"
                    android:inputType="text"
                    android:hint="@string/label_full_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_gender"
                android:layout_below="@+id/layout_name">
                <EditText
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_gender" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_dob"
                android:layout_below="@+id/layout_gender">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_dob"
                    android:inputType="date"
                    android:hint="@string/label_date_of_birth"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_userType"
                android:layout_below="@+id/layout_dob">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_userType"
                    android:hint="@string/label_user_type"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_occupation"
                android:layout_below="@+id/layout_userType">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_occupation"
                    android:inputType="text"
                    android:hint="@string/label_occupation"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_email"
                android:layout_below="@+id/layout_occupation">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/et_label_email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_password"
                android:layout_below="@+id/layout_email"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:hint="@string/et_label_password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_changeAccount"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_below="@+id/layout_password">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/tv_changeAccount"
                    android:hint="@string/label_sign_up_with_diffrent_account"/>
            </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_continue"
                    android:layout_below="@id/layout_changeAccount"
                    android:background="@drawable/button_border"
                    android:hint="@string/label_continue"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>