<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:id="@+id/ibBack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_otp_verification"
        android:id="@+id/tv_otp"
        android:textSize="@dimen/text_size_normal"
        android:layout_below="@id/ibBack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_enter_the_verification_code_sent_to_your_number_via_sms"
        android:layout_below="@id/tv_otp"
        android:textSize="@dimen/text_size_small"
        android:id="@+id/tvText"/>
    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_below="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_otpOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:gravity="center_horizontal"
            android:maxLength="1"
            android:ems="3"
            android:nextFocusRight="@id/et_otpTwo"/>
        <requestFocus/>
        <EditText
            android:id="@+id/et_otpTwo"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="3"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/et_otpThree"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="numberPassword"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/et_otpFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:ems="3"
            android:inputType="numberPassword"
            android:maxLength="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_otp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_normal">
        <Button
            android:id="@+id/btn_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_resend"
            android:background="@drawable/button_border"
            android:layout_marginRight="@dimen/margin_normal"
            android:ems="9"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:text="@string/btn_submit"
            android:textColor="@color/colorWhite"
            android:background="@color/black"
            android:ems="9"/>
    </LinearLayout>
    
</RelativeLayout>